force-app/main/default/objects/Digital_IVR__c/Digital_IVR__c.object-meta.xml
<CustomObject>
    <label>Digital IVR</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Digital IVR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital IVR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>