force-app/main/default/objects/Digital_IVR__c/fields/DIVR_Id__c.field-meta.xml
<CustomField>
    <fullName>DIVR_Id__c</fullName>
    <description>Unique id identifying Digitial IVR (UUID).</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DIVR Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>