force-app/main/default/objects/Digital_IVR__c/fields/HC_Link__c.field-meta.xml
<CustomField>
    <fullName>HC_Link__c</fullName>
    <description>Help Center link related to Digital IVR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HC Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>