force-app/main/default/objects/Digital_IVR__c/fields/LinkText__c.field-meta.xml
<CustomField>
    <fullName>LinkText__c</fullName>
    <description>LinkText for URL related articles.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LinkText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>