force-app/main/default/objects/Digital_IVR__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Customer product tier for digital IVR.</description>
    <label>Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Contractor Only</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Legacy Premium</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
                <isActive>false</isActive>
                <label>Any</label>
            </value>
            <value>
                <fullName>Premium</fullName>
                <isActive>false</isActive>
                <label>Premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>